k8s/civo/civo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wedding
  name: wedding-guest
  labels:
    app: wedding-guest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wedding-guest
  template:
    metadata:
      labels:
        app: wedding-guest
    spec:
      containers:
        - name: wedding-guest
          image: ghcr.io/lucascarioca/wedding-registration-guest-do:latest
          ports:
            - containerPort: 80
              name: w-r-g-http
